--- a/src/style.scss
+++ b/src/style.scss
@@ -35,13 +35,42 @@ body {
 
 .score-box {
   padding: 0 10px;
-  height: 40px;
+  height: 50px;
   display: flex;
   align-items: center;
-}
+  position: relative;
+  overflow: hidden;
 
-.score-box:nth-of-type(even) {
-  background-color: #e0e0e2;
+  &:nth-of-type(even) {
+    background-color: #e0e0e2;
+  }
+
+  &:nth-of-type(1)::after,
+  &:nth-of-type(2)::after,
+  &:nth-of-type(3)::after {
+    color: white;
+    font-weight: 700;
+    position: absolute;
+    top: -16px;
+    right: -15px;
+    padding: 20px 20px 40px 50px;
+    clip-path: polygon(100% 0px, 0px 0px, 100% 100%);
+  }
+
+  &:nth-of-type(1)::after {
+    background-color: #F1B604;
+    content: "1st";
+  }
+
+  &:nth-of-type(2)::after {
+    background-color: #8EA6B4;
+    content: "2nd";
+  }
+
+  &:nth-of-type(3)::after {
+    background-color: #9C897C;
+    content: "3rd";
+  }
 }
 
 .line {
@@ -81,6 +110,14 @@ input {
 
   .caption {
     text-align: left;
+
+    &::before {
+      position: absolute;
+      content: url(./assets/images/trophy.png);
+      transform: scale(.1);
+      height: 0px;
+      right: 35%;
+    }
   }
 
   .scores-section {
