--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Ubuntu', sans-serif;
-  background-color: #F6FFF8;
+  background-color: #f6fff8;
   color: #212529;
 }
 
@@ -32,7 +32,7 @@ body {
 }
 
 .scores-list {
-  border: 2px solid #6B9080;
+  border: 2px solid #6b9080;
   border-radius: 10px;
 }
 
@@ -43,16 +43,16 @@ body {
   align-items: center;
   position: relative;
   overflow: hidden;
-  border: solid #DBE5E6 1px;
+  border: solid #dbe5e6 1px;
   margin: 10px;
   border-radius: 8px;
 
   &:nth-of-type(1) {
-    border-color: #F1B604;
+    border-color: #f1b604;
   }
 
   &:nth-of-type(2) {
-    border-color: #8EA6B4;
+    border-color: #8ea6b4;
   }
 
   &:nth-of-type(3) {
@@ -72,21 +72,21 @@ body {
     top: -16px;
     right: -15px;
     padding: 20px 20px 40px 50px;
-    clip-path: polygon(100% 0px, 0px 0px, 100% 100%);
+    clip-path: polygon(100% 0, 0 0, 100% 100%);
   }
 
   &:nth-of-type(1)::after {
-    background-color: #F1B604;
+    background-color: #f1b604;
     content: "1st";
   }
 
   &:nth-of-type(2)::after {
-    background-color: #8EA6B4;
+    background-color: #8ea6b4;
     content: "2nd";
   }
 
   &:nth-of-type(3)::after {
-    background-color: #9C897C;
+    background-color: #9c897c;
     content: "3rd";
   }
 }
@@ -117,7 +117,7 @@ body {
 input {
   margin: 0 0 15px;
   padding: 12px 8px;
-  border: 2px solid #6B9080;
+  border: 2px solid #6b9080;
   border-radius: 8px;
   font-size: 1rem;
 
@@ -132,7 +132,7 @@ input {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
   border-radius: 5px;
-  background-color: #6B9080;
+  background-color: #6b9080;
   color: #fff;
   cursor: pointer;
   border: none;
@@ -156,8 +156,8 @@ input {
     &::before {
       position: absolute;
       content: url(./assets/images/trophy.png);
-      transform: scale(.1);
-      height: 0px;
+      transform: scale(0.1);
+      height: 0;
       right: 35%;
     }
   }
